CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT("Render")

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED YES)
SET(CMAKE_CXX_EXTENSIONS OFF)

FIND_PACKAGE(CUDA)

IF (CUDA_FOUND)
    ENABLE_LANGUAGE(CUDA)
    SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -gencode arch=compute_72,code=sm_72 -G -g -rdc=true)
    ADD_DEFINITIONS(-DCUDA)
ELSE()
    MESSAGE(STATUS "Not Found Cuda")
ENDIF()


IF(CUDA_FOUND)
	ADD_EXECUTABLE(Render "main.cu")
ELSE()
	ADD_EXECUTABLE(Render "main.cpp")
ENDIF()